Add endpoint to show player information
